hsp3-forgery/tests/syntax_error/syntax_error.hsp
	// 解釈できない文字
	[你好]

	// 構文違反のトークン
	+

	// 不正な関数呼び出し式
	mes a()()
	mes (a)()
	mes a(

	// 名前のないラベル式やラベル文
	button "", *
*
